--- a/context/brand-context/default/scss/30-mixins/arrow.scss
+++ b/context/brand-context/default/scss/30-mixins/arrow.scss
@@ -1,6 +1,6 @@
+@use '../20-functions/url-encode';
 
 // Variable arrow, useful for things like accordions
-
 @mixin arrow($colorHex, $direction, $size) {
 	$svg-string: '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path fill="#{$colorHex}" d="M4.516 7.548c.436-.446 1.043-.481 1.576 0L10 11.295l3.908-3.747c.533-.481 1.141-.446 1.574 0 .436.445.408 1.197 0 1.615-.406.418-4.695 4.502-4.695 4.502a1.095 1.095 0 0 1-1.576 0S4.924 9.581 4.516 9.163s-.436-1.17 0-1.615z" /></svg>';
 
@@ -40,44 +40,3 @@
 		}
 	}
 }
-
-@function str-replace($string, $search, $replace: '') {
-	$index: str-index($string, $search);
-	@if $index {
-		@return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
-	}
-	@return $string;
-}
-
-@function url-encode($string) {
-	$map: (
-		"%": "%25",
-		"<": "%3C",
-		">": "%3E",
-		" ": "%20",
-		"!": "%21",
-		"*": "%2A",
-		"'": "%27",
-		'"': "%22",
-		"(": "%28",
-		")": "%29",
-		";": "%3B",
-		":": "%3A",
-		"@": "%40",
-		"&": "%26",
-		"=": "%3D",
-		"+": "%2B",
-		"$": "%24",
-		",": "%2C",
-		"/": "%2F",
-		"?": "%3F",
-		"#": "%23",
-		"[": "%5B",
-		"]": "%5D"
-	);
-	$new: $string;
-	@each $search, $replace in $map {
-		$new: str-replace($new, $search, $replace);
-	}
-	@return $new;
-  }
