--- a/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
@@ -60,7 +60,7 @@
 					position: absolute;
 					background: $author-icon-background;
 					background-position: -13px 1px;
-					background-size: 30px;
+					background-size: $submission-header-author-background-size;
 					padding-left: 20px;
 					height: 14px;
 					margin-left: 3px;
@@ -86,7 +86,7 @@
 				background: $author-icon-background;
 				background-position: 1px 1px;
 				background-size: cover;
-				padding-left: 30px;
+				padding-left: $submission-header-author-background-size;
 				height: 12px;
 				margin-left: 3px;
 				width: 0;
@@ -135,13 +135,13 @@
 
 			&:after {
 				content: ' ';
-				width: 30px;
+				width: $submission-header-author-background-size;
 				height: 17px;
 				background: url("/images/box-tail.png") no-repeat;
 				background-repeat: repeat;
 				z-index: 999;
 				transform: rotate(-1deg);
-				background-size: 30px;
+				background-size: $submission-header-author-background-size;
 				position: absolute;
 				top: 99.5%;
 				left: 15%;
